--- a/app-meta.json
+++ b/app-meta.json
@@ -3,7 +3,7 @@
     "latestVersionCode": 36,
     "minVersionCode": 21,
     "forceFrom": 0,
-    "message": "NEW Tarot Deck!",
+    "message": "Direct planets added to retro info",
     "storeUrl": "https://play.google.com/store/apps/details?id=io.github.astrocycles137.astrocycles"
   },
   "metaUpdated": "2025-12-01T16:00:00Z"
