--- a/app-meta.json
+++ b/app-meta.json
@@ -3,7 +3,7 @@
     "latestVersionCode": 40,
     "minVersionCode": 21,
     "forceFrom": 0,
-    "message": "Planetary chart added to Today's Sky",
+    "message": "bug fixes & improvements",
     "storeUrl": "https://play.google.com/store/apps/details?id=io.github.astrocycles137.astrocycles"
   },
   "metaUpdated": "2025-12-01T16:00:00Z"
